objects/Process_Type__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used to check whether the specific process Template record is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Sub_Process_Must_Be_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean check to see if all the sub process are completed underneath Process</description>
        <label>All Sub Process Must Be Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>unique identifier for a record that can be used when importing record, searable &amp; etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sub_Processes__c</fullName>
        <description>Used to count the number of Sub process in the parent Process</description>
        <label>Number of Sub-Processes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Condition__c</fullName>
        <description>Used to determine whether its New, Renewal, Off-Cycle, Termination of particular record</description>
        <label>Process Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Name_Picklist__c</fullName>
        <description>Used to identify the Stage of the Process template Record</description>
        <label>Process Template Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Benefit Request</fullName>
                </value>
                <value>
                    <fullName>ARC Approval</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Quote Delivered</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Group Structure &amp; Admin Setup</fullName>
                </value>
                <value>
                    <fullName>Benefit Design &amp; Creation of NAEGS</fullName>
                </value>
                <value>
                    <fullName>Benefit Coding, Loading, &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment, Materials, &amp; Support</fullName>
                </value>
                <value>
                    <fullName>Enrollment &amp; ID Card Generation</fullName>
                </value>
                <value>
                    <fullName>Post Sales Document Generation</fullName>
                </value>
                <value>
                    <fullName>Billing (Monthly) Invoices</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Member Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Used to identify the Sequence number of the record for sorting</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Benefit Request</fullName>
                </value>
                <value>
                    <fullName>ARC Approval</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Quote Delivered</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Group Structure &amp; Admin Setup</fullName>
                </value>
                <value>
                    <fullName>Benefit Design &amp; Creation of NAEGS</fullName>
                </value>
                <value>
                    <fullName>Benefit Coding, Loading, &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment, Materials, &amp; Support</fullName>
                </value>
                <value>
                    <fullName>Enrollment &amp; ID Card Generation</fullName>
                </value>
                <value>
                    <fullName>Post Sales Document Generation</fullName>
                </value>
                <value>
                    <fullName>Billing (Monthly) Invoices</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Member Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to identify the status of the record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Process_Type_Count__c</fullName>
        <label>Sub Process Type Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <description>Used to identify whether it’s a pre-sales/post-sales active record</description>
        <label>Used For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Post-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Setup Objects used for AIA Workplan
AIA - Custom object used to store the Stage, type &amp; status of Process Template . This object is a Parent Template for AIA Workplan. 
This object will replace the old functionality of AIA WorkPlan Type.
This is implemented for JUNE-2018 Release.</description>
    <label>Process Template</label>
    <nameField>
        <displayFormat>PT-{000000}</displayFormat>
        <label>Process Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Stage__c</columns>
        <columns>Process_Condition__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Process_Name_Picklist__c</columns>
        <columns>Used_For__c</columns>
        <columns>Version__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Number_of_Sub_Processes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Process_Name_Picklist__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>